data gatering added

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 py7zr
 pandas
+numpy
+selenium
+beautifulsoup4
 tqdm
 PyYAML
 matplotlib
@@ -7,7 +10,7 @@ notebook
 boto3
 mypy-boto3-s3
 python-box==6.0.2
-ensure==1.0.2
+ensure==1.0.4
 uvicorn==0.18.3
 Jinja2==3.1.2
 -e .
