--- a/config/config.yaml
+++ b/config/config.yaml
@@ -5,5 +5,15 @@ data_gathering:
   source_url: https://www.smartprix.com/laptops
   local_data_file: artifacts/data_gathering/smartprix.html
 
+data_ingestion:
+  root_dir: artifacts/data_ingestion
+  html_file_path: artifacts/data_gathering/smartprix.html
+  data_path: artifacts/data_ingestion/smartprix.csv
+
+data_preprocessing:
+  root_dir: artifacts/data_preprocessing
+  raw_data_path: artifacts/data_ingestion/smartprix.csv
+  preprocessed_data_path: artifacts/data_preprocessing/preprocessed_data.csv
+
 
 
