--- a/config/config.yaml
+++ b/config/config.yaml
@@ -25,6 +25,11 @@ missing_value_imputation:
   after_cleaning: artifacts/data_cleaning/cleaned_data.csv
   filled_data_path: artifacts/missing_value_imputation/after_missing_value_imputation.csv
 
+feature_selection:
+  root_dir: artifacts/feature_selection
+  after_missing_value_imputation: artifacts/missing_value_imputation/after_missing_value_imputation.csv
+  selected_data_path: artifacts/feature_selection/after_feature_selection.csv
+  
   
 
 
